# llm-eval-studio

./: .gitignore  README.md  conftest.py  pyproject.toml
api/: database.py  main.py  routes.py  schemas.py
eval_runner/: models.py  runner.py  scorers.py
eval_runner/test_cases/: sample.json
migrations/: 001_initial_schema.sql
tests/: ManualTesting.md  test_api.py  test_graders.py  test_runner.py
tests/e2e/: README.md  conftest.py  test_error_paths.py  test_exact_match.py  test_llm_judge.py  test_run_comparison.py
tests/unit/: test_api.py  test_graders.py  test_models.py  test_runner.py
